Update versions of deps ci.yml
Set ruff version to v0.5.5 and pre-commit to 3.7.1

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,9 +22,9 @@ jobs:
       - name: "Update pip"
         run: python -m pip install --upgrade pip
       - name: "Install ruff"
-        run: pip install ruff
+        run: pip install ruff==0.5.5
       - name: "Install pre-commit"
-        run: pip install pre-commit
+        run: pip install pre-commit==3.7.1
       - name: "Run Ruff"
         run: ruff check --output-format=github .
       - name: "Run pre-commit"
