--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ pandas = "^2.2.2"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.7.1"
+ruff = "^0.5.7"
 
 [build-system]
 requires = ["poetry-core"]
