--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ datetime = "^5.5"
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.7.1"
 ipykernel = "^6.29.5"
+ruff = "0.5.7"
 
 [build-system]
 requires = ["poetry-core"]
