--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.12"
 pandas = "^2.2.2"
 requests = "^2.32.3"
 datetime = "^5.5"
+pytest = "^8.3.3"
 
 
 [tool.poetry.group.dev.dependencies]
